# clinial_quality_measures

./: README.md  json.txt  pyproject.toml
data/: AllergyIntolerance.ndjson  CarePlan.ndjson  CareTeam.ndjson  Condition.ndjson  Device.ndjson  DiagnosticReport.ndjson  DocumentReference.ndjson  Encounter.ndjson  ImagingStudy.ndjson  Immunization.ndjson  MedicationRequest.ndjson  Procedure.ndjson
lab5_cqms/: main.py
lab5_cqms/deliverables/: __init__.py  cms125v11.py  cms147v11.py  cms165v11.py
lab5_cqms/output/CMS125v11Runner/: initial_population.json  numerator.json
lab5_cqms/output/CMS147v11Runner/: denominator.json  initial_population.json  numerator.json
lab5_cqms/output/CMS165v11Runner/: denominator_exclusions.json  initial_population.json  numerator.json
lab5_cqms/util/: helpers.py  runner.py  static.py
test_subset/data/: Condition.ndjson  Encounter.ndjson  Immunization.ndjson  Patient.ndjson  Procedure.ndjson
test_subset/output/CMS125v11Runner/: denominator.json  numerator.json
test_subset/output/CMS147v11Runner/: denominator.json  initial_population.json  numerator.json
test_subset/output/CMS165v11Runner/: denominator_exclusions.json  initial_population.json  numerator.json
